--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -3,15 +3,16 @@ FROM ioft/armhf-debian:jessie
 RUN sed 's/main/main non-free contrib/' /etc/apt/sources.list > /tmp/sources.list && \
     mv /tmp/sources.list /etc/apt/sources.list && \
     apt-get update && \
-    env DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y && \
     env DEBIAN_FRONTEND=noninteractive apt-get install -yq \
         build-essential \
         cpanminus \
         perl \
-    && apt-get clean
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-ADD . /slic3r
+COPY . /slic3r
 WORKDIR /slic3r
 RUN perl Build.PL
+ENV PATH $PATH:/slic3r
 
-ENTRYPOINT ["/slic3r/slic3r.pl"]
+ENTRYPOINT ["slic3r.pl"]
