--- a/configs/default.ini
+++ b/configs/default.ini
@@ -2,7 +2,7 @@
 avoid_crossing_perimeters = 0
 bed_shape = 0x0,200x0,200x200,0x200
 bed_temperature = 115
-bottom_solid_layers = 4
+bottom_solid_layers = 3
 bridge_acceleration = 4000
 bridge_fan_speed = 100
 bridge_flow_ratio = 1
@@ -26,7 +26,7 @@ extrusion_axis = E
 extrusion_multiplier = 1
 extrusion_width = 0.5
 fan_always_on = 0
-fan_below_layer_time = 20
+fan_below_layer_time = 15
 filament_diameter = 3
 fill_angle = 45
 fill_density = 15%
@@ -39,7 +39,7 @@ first_layer_speed = 25
 first_layer_temperature = 230
 g0 = 0
 gap_fill_speed = 20
-gcode_arcs = 0
+gcode_arcs = 1
 gcode_comments = 0
 gcode_flavor = reprap
 infill_acceleration = 4000
@@ -60,7 +60,7 @@ notes =
 nozzle_diameter = 0.4
 only_retract_when_crossing_perimeters = 1
 ooze_prevention = 0
-output_filename_format = [input_filename_base].gcode
+output_filename_format = [input_filename_base].g
 overhangs = 1
 perimeter_acceleration = 2000
 perimeter_extruder = 1
@@ -82,7 +82,7 @@ seam_position = nearest
 skirt_distance = 3
 skirt_height = 1
 skirts = 0
-slowdown_below_layer_time = 30
+slowdown_below_layer_time = 20
 small_perimeter_speed = 30
 solid_fill_pattern = rectilinear
 solid_infill_below_area = 50
@@ -111,7 +111,7 @@ threads = 4
 toolchange_gcode = 
 top_infill_extrusion_width = 0
 top_solid_infill_speed = 75
-top_solid_layers = 5
+top_solid_layers = 4
 travel_speed = 150
 use_firmware_retraction = 1
 use_relative_e_distances = 0
